# absenteeism-prediction

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
absenteeism/: utils.py
absenteeism/dataprep/: constants.py  preproc.py
absenteeism/ml/: constants.py  scalers.py  train.py
absenteeism/scripts/: predict_outputs.py  train_model.py
data/: absenteeism_input_data.csv
notebooks/: absenteeism_analysis.ipynb
